--- a/requirements.txt
+++ b/requirements.txt
@@ -15,4 +15,7 @@ sgmllib3k==1.0.0
 six==1.17.0
 typing_extensions==4.12.2
 urllib3==2.3.0
-aiohttp=3.11.13
+feedparser==6.0.10
+croniter==1.4.1
+pydantic==2.5.2
+aiohttp==3.11.13
