--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,20 @@
 # requirements.txt
 
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.13
+aiosignal==1.3.2
 annotated-types==0.7.0
+attrs==25.2.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
 croniter==6.0.0
 feedparser==6.0.11
+frozenlist==1.5.0
 idna==3.10
+multidict==6.1.0
+propcache==0.3.0
 pydantic==2.10.6
+pydantic_core==2.31.1
 python-dateutil==2.9.0.post0
 pytz==2025.1
 requests==2.32.3
@@ -15,5 +23,4 @@ sgmllib3k==1.0.0
 six==1.17.0
 typing_extensions==4.12.2
 urllib3==2.3.0
-pydantic==2.5.2
-aiohttp==3.11.13
+yarl==1.18.3
